# robot

./: .gitignore  README.md  config.ini
graduate_design/src/: start_aiui.sh
graduate_design/src/aws-robomaker-hospital-world/worlds/: hospital.world
graduate_design/src/core_service/: CMakeLists.txt  package.xml
graduate_design/src/core_service/scripts/: audio_controller.py
graduate_design/src/hospital_transport/: CMakeLists.txt  README.md  package.xml
graduate_design/src/hospital_transport/action/: Transport.action
graduate_design/src/hospital_transport/launch/: transport.launch
graduate_design/src/hospital_transport/scripts/: pickup_node.py  send_task.py  transport_server.py
graduate_design/src/ros_service/: CMakeLists.txt  package.xml
graduate_design/src/ros_service/launch/: take_websocket.launch
graduate_design/src/ros_service/scripts/: rosservice_test.py
graduate_design/src/ros_service/srv/: RobotStatus.srv  SensorData.srv
graduate_design/src/ucar_nav/: CMakeLists.txt
graduate_design/src/ucar_nav/launch/: fusion_mapping.launch  fusion_mapping_rtabmap.launch  gmapping.launch  map_save.launch  pointcloud_to_scan.launch  ucar_navigation.launch  ucar_wpnav.launch
graduate_design/src/ucar_nav/launch/config/amcl/: amcl_omni.launch
graduate_design/src/ucar_nav/launch/config/move_base/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
graduate_design/src/ucar_nav/maps/: lmz.pgm  lmz.yaml  zj.pgm  zj.yaml  zj_modified.pgm  zj_modified.yaml
graduate_design/src/ucar_nav/rviz/: fusion_mapping.rviz  map_tool.rviz
graduate_design/src/ucar_nav/scripts/: detect.py  wpnav.py
graduate_design/src/voice_service/: CMakeLists.txt  README.md  package.xml
graduate_design/src/voice_service/backup/Linux_aiui6.8.0003.0008_9449f0a6/bin_x64/: aiui_sample
graduate_design/src/voice_service/backup/Linux_aiui6.8.0003.0008_9449f0a6/bin_x64/AIUI/assets/vtn/: vtn.ini
graduate_design/src/voice_service/backup/Linux_aiui6.8.0003.0008_9449f0a6/samples/: CMakeLists.txt
graduate_design/src/voice_service/backup/Linux_aiui6.8.0003.0008_9449f0a6/samples/AIUI/cfg/: aiui.cfg
graduate_design/src/voice_service/backup/Linux_aiui6.8.0003.0008_9449f0a6/samples/build_x64/: CMakeCache.txt  Makefile  cmake_install.cmake
graduate_design/src/voice_service/backup/Linux_aiui6.8.0003.0008_9449f0a6/samples/src/: demo.cpp
graduate_design/src/voice_service/config/: aiui_params.yaml
graduate_design/src/voice_service/include/aiui/: AIUIConstant.h  PcmPlayer.h
graduate_design/src/voice_service/launch/: aiui.launch
graduate_design/src/voice_service/scripts/: convert_from_demo.sh  setup_env.sh
graduate_design/src/voice_service/src/: aiui_node.cpp
graduate_design/src/voice_service/src/utils/: IatResultUtil.cpp  StreamNlpTtsHelper.cpp
graduate_design/src/waterplus_map_tools/launch/: add_waypoint.launch  add_waypoint_simulation.launch
graduate_design/src/wpiont_nav/: CMakeLists.txt  package.xml
graduate_design/src/wpiont_nav/data/: waypoint.json
graduate_design/src/wpiont_nav/scripts/: odom_monitor.py  pose_to_json.py  wp_na.py
graduate_design/src/wpr_simulation/scripts/: demo_map_tools.py
graduate_design/src/zj_base/: CMakeLists.txt  package.xml
graduate_design/src/zj_base/config/: all_controllers.yaml  control.yaml  hellow.rviz
graduate_design/src/zj_base/launch/: frames.gv  minimal.launch  test.launch
graduate_design/src/zj_base/meshes/: box.stl  box1.stl  box2.dae  box2.stl  box3.dae  box3.stl  mdae.dae  mdae1.dae  modle.dae  modle.stl  未名.blend  未名.blend1  未命名.blend  未命名.blend1  未命名.dae
graduate_design/src/zj_base/rviz/: robot.rviz
graduate_design/src/zj_base/script/: drawer_control_node.py  set_initial_position.py  simple_drawer_control.py
graduate_design/src/zj_base/urdf/: robot.urdf  robot.urdf1
graduate_design/src/zj_base/urdf/xacro/: camera.xacro  car.xacro  depth_camera.xacro  depth_camera_sensors.xacro  drawer_control.xacro  drawer_system.xacro  laser.xacro  laser_sensors.xacro  move.xacro  move_bake.xacro  robot.urdf1  robot.xacro  test.xacro
graduate_design/src/zj_base/urdf/xacro/bake/: car_bakeup.xacro  car_bakeup1.xacro  moto.xacro  robot.xacro  robot_bake.urdf  robot_bake3.urdf
graduate_web/: .gitignore  BACKEND_SETUP.md  README.md
graduate_web/backend/: pom.xml
graduate_web/backend/src/main/java/com/hospital/: HospitalApplication.java
graduate_web/backend/src/main/java/com/hospital/common/: GlobalExceptionHandler.java  JwtUtil.java  Result.java
graduate_web/backend/src/main/java/com/hospital/config/: JacksonConfig.java  RosConfig.java  WebConfig.java
graduate_web/backend/src/main/java/com/hospital/controller/: AuthController.java  ConsultationController.java  DoctorController.java  MedicalRecordController.java  MedicineController.java  PatientController.java  PrescriptionController.java  RobotController.java  UserController.java
graduate_web/backend/src/main/resources/: application.properties  application.yml
graduate_web/database/: SETUP.md  init.sql
graduate_web/frontend/: index copy.html  index.html  package-lock.json  package.json  vite.config.js
graduate_web/frontend/src/: App.vue
graduate_web/frontend/src/aiui/: app.js
graduate_web/frontend/src/api/: robot.js
graduate_web/frontend/src/layouts/: MainLayout.vue
graduate_web/frontend/src/router/: index.js
graduate_web/frontend/src/stores/: user.js
graduate_web/frontend/src/utils/: api.js
graduate_web/frontend/src/views/: Dashboard.vue  Login.vue
graduate_web/frontend/src/views/consultation/: ConsultationList.vue
graduate_web/frontend/src/views/doctor/: DoctorList.vue
graduate_web/frontend/src/views/medical-record/: MedicalRecordList.vue
graduate_web/frontend/src/views/medicine/: MedicineList.vue
graduate_web/frontend/src/views/patient/: PatientList.vue
graduate_web/frontend/src/views/prescription/: PrescriptionList.vue
graduate_web/frontend/src/views/robot/: RobotControl.vue
graduate_web/frontend/src/views/user/: UserList.vue
(+28 files in other folders)
