<?xml version="1.0"?>
<package format="2">
  <name>voice_service</name>
  <version>0.1.0</version>
  <description>AIUI voice service ROS package</description>

  <!-- 使用正确的邮箱格式 -->
  <maintainer email="zj@zj.com">zj</maintainer>
  <!-- 或者使用你的真实邮箱，例如： -->
  <!-- <maintainer email="your.email@gmail.com">Your Name</maintainer> -->

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>